--- a/.github/workflows/generateApiType.yaml
+++ b/.github/workflows/generateApiType.yaml
@@ -16,23 +16,7 @@ jobs:
       - name: Generate Api Type
         run: bun run api:build
 
-      - run: cat $GITHUB_EVENT_PATH
-      - uses: actions/checkout@v3
+      - name: Git Auto Commit
+        uses: stefanzweifel/git-auto-commit-action@v5.0.0
         with:
-          ref: ${{ github.head_ref }}
-      - run: ./script.sh
-      - name: Diff
-        id: diff
-        run: |
-          git add -N .
-          git diff --name-only --exit-code
-        continue-on-error: true
-      - name: Commit & Push
-        run: |
-          set -x
-          git config user.name github-actions[bot]
-          git config user.email 41898282+github-actions[bot]@users.noreply.github.com
-          git add .
-          git commit --author=. -m 'generated'
-          git push
-        if: steps.diff.outcome == 'failure'
+          commit_message: generate api type
