--- a/.github/workflows/generateApiType.yaml
+++ b/.github/workflows/generateApiType.yaml
@@ -1,5 +1,8 @@
 name: generateApiType
-on: pull_request
+on:
+  pull_request:
+    types: [opened, synchronize, reopened]
+
 jobs:
   generate:
     runs-on: ubuntu-latest
