--- a/.github/workflows/generateApiType.yaml
+++ b/.github/workflows/generateApiType.yaml
@@ -31,4 +31,4 @@ jobs:
       - name: Git Auto Commit
         uses: stefanzweifel/git-auto-commit-action@v5.0.0
         with:
-          commit_message: echo "Generate API Type ${{ env.CURRENT_DATETIME }}"
+          commit_message: "Generate API Type"
